# game-time-tracker

./: .gitignore  AGENTS-template.md  AGENTS.md  Cargo.toml  README.md  build.rs  check_errors.txt  gen_icon.py  gen_icon.rs  out.txt  payload.json  tauri.conf.json  test.rs  test_close.rs  test_return.rs
.agents/commands/: commit.md  create-prd.md  create-rules.md  execute.md  plan-feature.md  prime.md
.agents/plans/: phase-1-core-tracking-engine.md  phase-2-system-tray.md  phase-3.md  phase-4-auto-start.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: PRD.md
src/: config.rs  icon.rs  main.rs  models.rs  process.rs  store.rs  tracker.rs  tray.rs  ui.rs
ui/: index.html
