[package]
name = "game-time-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
eframe = "0.30"
env_logger = "0.11.9"
log = "0.4.29"
muda = "0.15"
open = "5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.2"
tao = "0.30"
thiserror = "2.0.18"
tray-icon = "0.19"
winreg = "0.55"
