[package]
name = "game-time-tracker"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "gtt"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.9"
log = "0.4.29"
open = "5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.2"
thiserror = "2.0.18"
winreg = "0.55"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.0.0"


[build-dependencies]
tauri-build = "2.0.0"
winres = "0.1.12"
